Added debug routes to swagger
